fix: alignment.

--- a/src/scss/6-elements/_lists.scss
+++ b/src/scss/6-elements/_lists.scss
@@ -28,9 +28,10 @@
   }
   >li {
     display:flex;
+    line-height: var(--web-line-height-md);
     &::before {
       counter-increment: numeric-list;
-      content:counter(numeric-list); align-self:start;
+      content:counter(numeric-list) ". "; align-self:start;
     }
   }
   .#{$p}-numeric-list {
